# r_wallpaper_changer

./: Cargo.toml  config.yaml
src/: config.rs  file_list.rs  main.rs  metadata.rs
