[package]
name = "wallpaper_changer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde ={ version = "1.0", features = ["derive"] }
serde_yaml = "0.9.19"
wallpaper = "3.2.0"
rand = "0.8.5"
image = "0.24.6"
tempfile = "3.5.0"
reqwest = { version = "0.11.16", features = ["blocking"] }
walkdir = "2.3.3"
log = "0.4.17"
env_logger = "*"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
#debug = 1

#[rust]
#debug-infolevel = 1